Fix vertical wrapping when body too large

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,7 +11,7 @@
 
     #app-body {
         display: flex;
-        flex-flow: column wrap;
+        flex-flow: column;
 
         width: 100%;
         height: 100%;
